@@ -4952,6 +4952,14 @@ Only one attribute may be at its Maximum value during character creation.</text>
       <text>The maximum level of a block that positively modifies an Attribute that the chosen foundation negatively modifies is Level 2. (CF 191)</text>
     </string>
     <string>
+      <key>Message_CustomDrug_Name</key>
+      <text>Please enter a name for your Drug.</text>
+    </string>
+    <string>
+      <key>MessageTitle_CustomDrug_Name</key>
+      <text>Drug Name</text>
+    </string>
+    <string>
       <key>Label_CrashEffect</key>
       <text>Crash Effect:</text>
     </string>
